--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Polaris</title>
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-<div id="test">Test text</div>
-
+<header>
+    <img class="header-logo-img" src="assets/logo.svg" alt="logo">
+    <nav>
+        <ol class="header-nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Play</a></li>
+            <li><a href="#">About</a></li>
+        </ol>
+    </nav>
+    <a class="contact" href="#">
+        <button>Contact</button>
+    </a>
+</header>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
