Improved design of header logo and navigation links

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,14 @@
 </head>
 <body>
 <header>
-    <img class="header-logo-img" src="assets/logo.svg" alt="logo">
+    <img class="header-logo-img" src="assets/logo.svg" width="140" height="80" alt="Logo">
     <nav>
-        <ol class="header-nav-list">
+        <ul class="header-nav-list">
             <li><a href="#">Home</a></li>
             <li><a href="#">Play</a></li>
             <li><a href="#">About</a></li>
-        </ol>
+        </ul>
     </nav>
-    <a class="contact" href="#">
-        <button>Contact</button>
-    </a>
 </header>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
