--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <img class="header-logo-img" src="assets/logo.svg" width="140" height="80" alt="Logo">
+    <img class="header-logo-img" src="assets/logo.svg" width="100" height="60" alt="Logo">
     <nav>
         <ul class="header-nav-list">
             <li><a href="#">Home</a></li>
@@ -15,6 +15,7 @@
             <li><a href="#">About</a></li>
         </ul>
     </nav>
+    <button class="header-settings-btn"></button>
 </header>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
