Added license notation

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,15 @@
     </nav>
     <button class="header-settings-btn"></button>
 </header>
+<main>
+</main>
+<footer>
+    <ul class="footer-meta-list">
+        <li><a href="https://polaris.net">@ 2022 Polaris</a></li>
+        <li><a href="https://icons8.com/">Icons by Icons8</a></li>
+        <li><a href="https://github.com/polarisofficial">Developed by Hazuki and Azazel</a></li>
+    </ul>
+</footer>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
