Removed unnecessary elements

--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,14 @@
 </head>
 <body>
 <header>
-    <img class="header-logo-img" src="assets/logo.svg" width="100" height="60" alt="Logo">
-    <nav>
-        <ul class="header-nav-list">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Play</a></li>
-            <li><a href="#">About</a></li>
-        </ul>
-    </nav>
-    <button class="header-settings-btn"></button>
+    <div class="header-logo">
+        <img class="header-logo-img" src="assets/anchor.png" width="60" height="60" alt="Logo">
+        <div class="header-logo-text">Polaris</div>
+    </div>
 </header>
 <main>
 </main>
 <footer>
-    <ul class="footer-meta-list">
-        <li><a href="https://polaris.net">@ 2022 Polaris</a></li>
-        <li><a href="https://icons8.com/">Icons by Icons8</a></li>
-        <li><a href="https://github.com/polarisofficial">Developed by Hazuki and Azazel</a></li>
-    </ul>
 </footer>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
