--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+<div class="container">
+</div>
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
