--- a/play.html
+++ b/play.html
@@ -3,11 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SONG NAME</title>
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/play.css">
+
+	<!-- Import styles -->
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/common.css">
+	<link rel="stylesheet" href="./css/play.css">
 </head>
 <body>
+
+<!-- Header -->
 <div id="container_header">
 	<div id="wrapper_profile">
 		<img id="profile_avatar" src="./assets/avatar.png" alt="PLAYER AVATAR">
@@ -22,11 +26,15 @@
 		<div class="precision_label">%</div>
 	</div>
 </div>
+
+<!-- Lane -->
 <div id="container_lane">
 	<div id="lane_effect_left" class="lane_effect"></div>
-	<div id="lane_judge_area"></div>
+	<img id="lane_judge_area" src="./assets/play/note_base.png" alt="Judge area">
 	<div id="lane_effect_right" class="lane_effect"></div>
 </div>
+
+<!-- Footer -->
 <div id="container_footer">
 	<div id="wrapper_judge_state">
 		<div id="judge_state" hidden>EXCELLENT</div>
@@ -39,6 +47,8 @@
 		<div id="song_name">Missed Dream</div>
 	</div>
 </div>
+
+<!-- Load script -->
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
