--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		  rel="stylesheet">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/common.css">
+	<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+<!-- Script -->
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
