--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700&display=swap"
 		  rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
+	<div class="background">
+		<div class="title">Polaris</div>
+		<div class="subtitle">Click here to continue</div>
+	</div>
 <!-- Script -->
 <script type="text/javascript" src="build/bundle.js"></script>
 </body>
