--- a/play.html
+++ b/play.html
@@ -15,7 +15,7 @@
 <div id="container_header">
 	<div id="wrapper_profile">
 		<img id="profile_avatar" src="./assets/avatar.png" alt="PLAYER AVATAR">
-		<div id="profile_name">PLAYER NAME</div>
+		<div id="profile_name">Player Name</div>
 	</div>
 	<div id="wrapper_combo">
 		<div class="combo_number">102</div>
